--- a/BusinessGame/BusinessGame/BusinessGame.csproj
+++ b/BusinessGame/BusinessGame/BusinessGame.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -165,8 +167,50 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AspNetRoles.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserClaims.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserLogins.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUsers.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Buildings.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\game_Db.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>game_Db.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\game_Db.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\game_Db.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>game_Db.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Maps.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Products.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserBuildings.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserProducts.cs">
+      <DependentUpon>game_Db.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -179,6 +223,23 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\game_Db.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>game_Db.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\game_Db.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>game_Db.edmx</DependentUpon>
+      <LastGenOutput>game_Db.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\game_Db.edmx.diagram">
+      <DependentUpon>game_Db.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\game_Db.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>game_Db.edmx</DependentUpon>
+      <LastGenOutput>game_Db.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -236,6 +297,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
